# gameListRust

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml
db/: data.sql
src/: custom_filters.rs  handlers.rs  main.rs  routes.rs  routes_tests.rs  schema.rs  schema_tests.rs  tests.rs  validators.rs
tests/: routes_tests.rs  schema_tests.rs
